fix: ingest null 입력 P1 리뷰 반영